--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,6 +2,7 @@
 
 dependencies:
 
+  - { role: elao.base }
   - { role: elao.mongodb-server }
   - { role: elao.mongodb-php }
   - { role: elao.project-php,
